used object for api-call
